# platform.core.api.libaccount-service

./: CMakeLists.txt
TC/: utc-accounts-svc.c
doc/: account_doc.h  account_manager_doc.h
doc_prod/: account_manager_doc.h
include/: account-error.h  account-types.h  account.h  account_PG.h  account_internal.h  account_product.h
include/mobile/: account.h
include/wearable/: account.h
packaging/: .libaccount-service.spec.swp  accounts-service.service  libaccount-service.spec
src/: CMakeLists.txt  account.c  account_offline.c  account_private_client.h  accounts-svc.pc.in
src/accounts/: CMakeLists.txt  account_mgr.xml  accounts-svc.pc.in
src/accounts/client/: CMakeLists.txt  account.c
src/accounts/common/: account-private.h  account_ipc_marshal.c  account_ipc_marshal.h  dbg.h
