
SET(SRCS
	account.c
	account_offline.c
)

INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/include)
IF(FEATURE_PROFILE_MOBILE)
INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/include/mobile)
ELSE(FEATURE_PROFILE_MOBILE)
INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/include/wearable)
ENDIF(FEATURE_PROFILE_MOBILE)


INCLUDE(FindPkgConfig)
pkg_check_modules(clientpkgs REQUIRED
		dlog
		glib-2.0
		gio-unix-2.0
		capi-base-common
		vconf
		account-common
		db-util
		pkgmgr-installer
)

FOREACH(flag ${clientpkgs_CFLAGS})
	SET(EXTRA_CFLAGS "${EXTRA_CFLAGS} ${flag}")
ENDFOREACH(flag)

FIND_PROGRAM(UNAME NAMES uname)
EXEC_PROGRAM("${UNAME}" ARGS "-m" OUTPUT_VARIABLE "ARCH")
IF ("${ARCH}" STREQUAL "arm")
        ADD_DEFINITIONS("-DTARGET_ARM")
        MESSAGE("[TARGET] Compile")
ELSE  ("${ARCH}" STREQUAL "arm")
        ADD_DEFINITIONS("-DTARGET_I386")
        MESSAGE("[i386] Compile")
ENDIF ("${ARCH}" STREQUAL "arm")

SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${EXTRA_CFLAGS} -Wall -Werror")
SET(CMAKE_LDFLAGS "-Wl,-zdefs")

ADD_DEFINITIONS("-DPREFIX=\"${CMAKE_INSTALL_PREFIX}\"")
ADD_DEFINITIONS("-DFACTORYFS=\"$ENV{FACTORYFS}\"")
ADD_DEFINITIONS("-DSLP_DEBUG")

IF(FEATURE_PROFILE_MOBILE)
	ADD_DEFINITIONS("-DTIZEN_PROFILE_MOBILE")
ENDIF(FEATURE_PROFILE_MOBILE)

ADD_LIBRARY(${PROJECT_NAME} SHARED ${SRCS})
SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES SOVERSION ${VERSION_MAJOR})
SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES VERSION ${VERSION})

TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${clientpkgs_LDFLAGS})

CONFIGURE_FILE(${PROJECT_NAME}.pc.in ${PROJECT_NAME}.pc @ONLY)

#INSTALL(TARGETS ${PROJECT_NAME} DESTINATION lib/accounts-svc)
#INSTALL(TARGETS ${PROJECT_NAME} DESTINATION lib)
#INSTALL(FILES ${CMAKE_BINARY_DIR}/${PROJECT_NAME}.pc DESTINATION lib/pkgconfig)

INSTALL(TARGETS ${PROJECT_NAME} DESTINATION ${LIBDIR}/accounts-svc)
INSTALL(TARGETS ${PROJECT_NAME} DESTINATION ${LIBDIR})
INSTALL(FILES ${CMAKE_BINARY_DIR}/src/${PROJECT_NAME}.pc DESTINATION ${LIBDIR}/pkgconfig)

IF(FEATURE_PROFILE_MOBILE)
INSTALL(FILES ${CMAKE_SOURCE_DIR}/include/mobile/account.h DESTINATION include)
ELSE(FEATURE_PROFILE_MOBILE)
INSTALL(FILES ${CMAKE_SOURCE_DIR}/include/wearable/account.h DESTINATION include)
ENDIF(FEATURE_PROFILE_MOBILE)

#INSTALL(FILES ${CMAKE_SOURCE_DIR}/include/account.h DESTINATION include)
INSTALL(FILES ${CMAKE_SOURCE_DIR}/include/account-error.h DESTINATION include)
INSTALL(FILES ${CMAKE_SOURCE_DIR}/include/account-types.h DESTINATION include)
INSTALL(FILES ${CMAKE_SOURCE_DIR}/include/account_internal.h DESTINATION include)

CONFIGURE_FILE(${CMAKE_SOURCE_DIR}/src/${PROJECT_NAME}.pc.in ${CMAKE_SOURCE_DIR}/src/${PROJECT_NAME}.pc @ONLY)
INSTALL(FILES ${CMAKE_BINARY_DIR}/src/${PROJECT_NAME}.pc DESTINATION ${LIBDIR}/pkgconfig)
#CONFIGURE_FILE(${CMAKE_SOURCE_DIR}/src/${PROJECT_NAME}.pc.in ${CMAKE_SOURCE_DIR}/src/${PROJECT_NAME}.pc @ONLY)
#INSTALL(FILES ${CMAKE_SOURCE_DIR}/src/${PROJECT_NAME}.pc DESTINATION lib/pkgconfig)
